RESOLVED FIXED18354
feFlood in attribute should be removed according to SVG 1.1 Errata
https://bugs.webkit.org/show_bug.cgi?id=18354
Summary feFlood in attribute should be removed according to SVG 1.1 Errata
Attachments
First attempt (3.04 KB, patch)
2008-04-07 23:51 PDT, Rob Buis
oliver: review+
Rob Buis
Comment 1 2008-04-07 23:51:40 PDT
Created attachment 20400 [details] First attempt Simple removal patch. Cheers, Rob.
Rob Buis
Comment 2 2008-04-08 00:23:58 PDT
Landed in r31718.
Chris Lord
Comment 3 2008-04-08 07:17:59 PDT
Since this change, WebKit no longer builds for me: WebCore/svg/SVGFEFloodElement.cpp: In member function ‘virtual WebCore::SVGFEFlood* WebCore::SVGFEFloodElement::filterEffect(WebCore::SVGResourceFilter*) const’: WebCore/svg/SVGFEFloodElement.cpp:57: error: ‘in1’ was not declared in this scope
Rob Buis
Comment 4 2008-04-08 07:59:41 PDT
Hi Chris, (In reply to comment #3) > Since this change, WebKit no longer builds for me: > WebCore/svg/SVGFEFloodElement.cpp: In member function ‘virtual > WebCore::SVGFEFlood* > WebCore::SVGFEFloodElement::filterEffect(WebCore::SVGResourceFilter*) const’: > WebCore/svg/SVGFEFloodElement.cpp:57: error: ‘in1’ was not declared in this > scope Oops! Wierd that I didnt see a compile error myself, or it was too late last night and didnt notice... Just remove that line I'd say, and see if someone can commit it for you if needed. I'll only be able to correct it after work, in an hour or two/three. Cheers, Rob.
Note You need to log in before you can comment on or make changes to this bug.